Fixed up the CSS to work nicely on smaller screens.

--- a/_sass/_handheld.scss
+++ b/_sass/_handheld.scss
@@ -35,7 +35,6 @@ nav.site {
 
 body {
   > * {
-    min-width: 640px;
     width: 100%;
   }
 }
